--- a/index.html
+++ b/index.html
@@ -3,12 +3,9 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>My Game</title>
-    <script>
-      main.js;
-    </script>
+    <title>菜鸟飞天传</title>
     <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css" />
-    <link rel="stylesheet" type="text/css" href="main.css" />
+    <link rel="stylesheet" type="text/css" href="css/main.css" />
   </head>
   <body>
     <div class="header">this is header</div>
@@ -265,7 +262,7 @@
           </div>
         </div>
         <div class="output">
-          <iframe></iframe>
+          
         </div>
       <div>
         <table>
@@ -317,4 +314,7 @@
     </div>
     <div class="footer">this is footer</div>
   </body>
+  <script>
+    system/main.js;
+  </script>
 </html>
